--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0613.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0613.html
@@ -241,9 +241,9 @@
             <ins title="nlp 2.00">f.</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1868 380 1921 408">
+        <span id="w_44_0" class="ocr_word" title="bbox 1868 380 1921 408">
           <span class="alternatives">
-            <ins title="nlp 2.00">42ν</ins>
+            <ins class="alt" title="nlp 2.00">42v</ins>
           </span>
         </span>
       </span>
@@ -573,9 +573,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 1108 776 1310 826" lang="grc">
+        <span id="w_109_0" class="ocr_word" title="bbox 1108 776 1310 826">
           <span class="alternatives">
-            <ins title="nlp 2.00">Σιωΐκῶν,</ins>
+            <ins class="alt" title="nlp 2.00">Στωϊκῶν,</ins>
+          </span>
+        </span>
+        <span id="w_109_1" class="ocr_word" title="bbox 1108 776 1310 826">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1348 793 1404 817" lang="grc">
@@ -586,11 +591,6 @@
         <span id="w_111" class="ocr_word" title="bbox 1442 794 1483 818" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_112" class="ocr_word" title="bbox 1525 776 1852 832" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατηγορούμενόν</ins>
           </span>
         </span>
       </span>
@@ -1118,9 +1118,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 748 1457 852 1513">
+        <span id="w_219_0" class="ocr_word" title="bbox 748 1457 852 1513">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὐκ&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐκ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_219_1" class="ocr_word" title="bbox 748 1457 852 1513">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 873 1460 1058 1512" lang="grc">
@@ -1146,11 +1151,6 @@
         <span id="w_224" class="ocr_word" title="bbox 1594 1458 1656 1497" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 1678 1459 1856 1498" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καλοῦσιν</ins>
           </span>
         </span>
       </span>
@@ -1562,9 +1562,14 @@
             <ins title="nlp 2.00">Ἀριστοτέλει</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 1450 1935 1578 1990" lang="grc">
+        <span id="w_306_0" class="ocr_word" title="bbox 1450 1935 1578 1990">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δηλοῖ</ins>
+            <ins class="alt" title="nlp 2.00">(δηλοῖ</ins>
+          </span>
+        </span>
+        <span id="w_306_1" class="ocr_word" title="bbox 1450 1935 1578 1990">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1607 1935 1675 1989" lang="grc">
@@ -1575,11 +1580,6 @@
         <span id="w_308" class="ocr_word" title="bbox 1706 1935 1766 1974" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_309" class="ocr_word" title="bbox 1790 1949 1857 1987" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -1701,14 +1701,14 @@
             <ins title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_334_0" class="ocr_word" title="bbox 1814 2079 1930 2109">
+        <span id="w_334_0_0" class="ocr_word" title="bbox 1814 2079 1930 2109">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ε&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_334_1" class="ocr_word" title="bbox 1814 2079 1930 2109">
+        <span id="w_334_0_1" class="ocr_word" title="bbox 1814 2079 1930 2109">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">f.43r</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1976,9 +1976,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_387" class="ocr_word" title="bbox 1154 2410 1393 2468" lang="grc">
+        <span id="w_387_0" class="ocr_word" title="bbox 1154 2410 1393 2468">
           <span class="alternatives">
-            <ins title="nlp 2.00">ψευδομένγ’</ins>
+            <ins class="alt" title="nlp 2.00">ψευδομένη᾿</ins>
+          </span>
+        </span>
+        <span id="w_387_1" class="ocr_word" title="bbox 1154 2410 1393 2468">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 1447 2412 1512 2455" lang="grc">
@@ -1991,18 +1996,8 @@
             <ins class="alt" title="nlp 1.00">πτώσεις</ins>
           </span>
         </span>
-        <span id="w_390" class="ocr_word" title="bbox 1755 2411 1858 2451" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπώσατο.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 203 2479 1858 2537">
-        <span id="w_391" class="ocr_word" title="bbox 203 2500 308 2526" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σατο.</ins>
-          </span>
-        </span>
         <span id="w_392" class="ocr_word" title="bbox 370 2501 423 2530" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -2249,15 +2244,14 @@
             <del title="nlp 0.90">fol.</del>
           </span>
         </span>
-        <span id="w_438" class="ocr_word" title="bbox 209 2811 251 2844">
+        <span id="w_438_0" class="ocr_word" title="bbox 209 2811 251 2844">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">36</ins>
+            <ins class="alt" title="nlp 2.00">36v</ins>
           </span>
         </span>
-        <span id="w_439" class="ocr_word" title="bbox 261 2820 276 2836">
+        <span id="w_438_1" class="ocr_word" title="bbox 209 2811 251 2844">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_440" class="ocr_word" title="bbox 391 2810 410 2841">
@@ -2325,12 +2319,6 @@
             <ins class="alt" title="nlp 1.00">ἱστορίαν</ins>
           </span>
         </span>
-        <span id="w_452" class="ocr_word" title="bbox 1887 2801 1928 2833">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P:</ins>
-            <del title="nlp 0.90">P:</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 134 2859 1882 2912">
         <span id="w_453" class="ocr_word" title="bbox 134 2880 165 2902" lang="grc">
@@ -2359,9 +2347,14 @@
             <del title="nlp 0.90">Ammonius</del>
           </span>
         </span>
-        <span id="w_458" class="ocr_word" title="bbox 924 2863 1072 2897" lang="grc">
+        <span id="w_458_0" class="ocr_word" title="bbox 924 2863 1072 2897">
           <span class="alternatives">
-            <ins title="nlp 2.00">Στοΐκων</ins>
+            <ins class="alt" title="nlp 2.00">Στοϊκων</ins>
+          </span>
+        </span>
+        <span id="w_458_1" class="ocr_word" title="bbox 924 2863 1072 2897">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1098 2863 1122 2896">
@@ -2394,11 +2387,6 @@
         <span id="w_464" class="ocr_word" title="bbox 1714 2871 1816 2903" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὄνομα</ins>
-          </span>
-        </span>
-        <span id="w_465" class="ocr_word" title="bbox 1841 2859 1882 2892">
-          <span class="alternatives">
-            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
       </span>
@@ -2483,8 +2471,7 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 388 2983 557 3016">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">indicayi:</ins>
-            <del title="nlp 0.90">indicayi:</del>
+            <ins title="nlp 2.00">indicani:</ins>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 584 2982 679 3016">
@@ -2536,20 +2523,20 @@
             <ins class="alt" title="nlp 1.00">19</ins>
           </span>
         </span>
-        <span id="w_490" class="ocr_word" title="bbox 1527 2975 1723 3020" lang="grc">
+        <span id="w_490_0" class="ocr_word" title="bbox 1527 2975 1723 3020">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεταμέλλαι</ins>
+            <ins class="alt" title="nlp 2.00">μεταμέλλει</ins>
+          </span>
+        </span>
+        <span id="w_490_1" class="ocr_word" title="bbox 1527 2975 1723 3020">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_491" class="ocr_word" title="bbox 1745 2976 1772 3009">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">P</ins>
             <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_492" class="ocr_word" title="bbox 1869 2987 1930 3008" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐκ</ins>
           </span>
         </span>
       </span>
