--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0662.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0662.html
@@ -43,13 +43,17 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 963 94 1394 129">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTERPRETATIOxXE</ins>
-            <del title="nlp 0.90">INTERPRETATIOxXE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
-        <span id="w_6" class="ocr_word" title="bbox 1423 93 1548 138">
+        <span id="w_6_0" class="ocr_word" title="bbox 1423 93 1548 138">
           <span class="alternatives">
-            <ins title="nlp 2.00">[Aiist.</ins>
+            <ins class="alt" title="nlp 2.00">[Arist.</ins>
+          </span>
+        </span>
+        <span id="w_6_1" class="ocr_word" title="bbox 1423 93 1548 138">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1574 105 1607 137">
@@ -66,11 +70,6 @@
         <span id="w_9" class="ocr_word" title="bbox 1758 93 1809 125">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">11.</ins>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1828 91 1888 137">
-          <span class="alternatives">
-            <ins title="nlp 2.00">29]</ins>
           </span>
         </span>
       </span>
@@ -219,16 +218,11 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1939 292 2025 316" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκο-</ins>
+            <ins title="nlp 2.00">ἀκολουθία</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 354 349 2024 406">
-        <span id="w_40" class="ocr_word" title="bbox 354 354 493 394" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λουθία</ins>
-          </span>
-        </span>
         <span id="w_41" class="ocr_word" title="bbox 530 368 684 406" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοιαύτη</ins>
@@ -462,12 +456,7 @@
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1606 567 1686 592" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνω</ins>
-          </span>
-        </span>
-        <span id="w_87" class="ocr_word" title="bbox 1700 584 1708 602">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἄνω,</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1751 554 1815 591" lang="grc">
@@ -781,9 +770,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 411 1051 529 1085">
+        <span id="w_147_0" class="ocr_word" title="bbox 411 1051 529 1085">
           <span class="alternatives">
-            <ins title="nlp 2.00">22bll</ins>
+            <ins class="alt" title="nlp 2.00">22b11</ins>
+          </span>
+        </span>
+        <span id="w_147_1" class="ocr_word" title="bbox 411 1051 529 1085">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 597 1038 657 1079">
@@ -829,11 +823,6 @@
         <span id="w_155_1" class="ocr_word" title="bbox 1762 1049 1801 1072">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_156" class="ocr_word" title="bbox 1950 1048 2027 1085" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μή,</ins>
           </span>
         </span>
       </span>
@@ -1196,18 +1185,17 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1672 1444 1713 1499">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(t)</ins>
-            <del title="nlp 0.90">(t</del>
+            <ins title="nlp 2.00">&amp;#x003C;ἡ</ins>
           </span>
         </span>
-        <span id="w_227" class="ocr_word" title="bbox 1746 1442 1928 1499" lang="grc">
+        <span id="w_227_0" class="ocr_word" title="bbox 1746 1442 1928 1499">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ἠ λέγουσα &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">λέγουσα#x003E;</ins>
           </span>
         </span>
-        <span id="w_228" class="ocr_word" title="bbox 1951 1441 1960 1457" lang="grc">
+        <span id="w_227_1" class="ocr_word" title="bbox 1746 1442 1928 1499">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ δυνατὸν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1269,9 +1257,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1072 1723 1344 1780">
-        <span id="w_241" class="ocr_word" title="bbox 1072 1723 1153 1780" lang="grc">
+        <span id="w_241_0" class="ocr_word" title="bbox 1072 1723 1153 1780">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; Πρᾶξις δ &amp;#x003E;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_241_1" class="ocr_word" title="bbox 1072 1723 1153 1780">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">δ&amp;#x003E;.</ins>
           </span>
         </span>
       </span>
@@ -1480,7 +1473,7 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1977 2113 2034 2137">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">O'J-</ins>
+            <ins title="nlp 2.00">δυ-</ins>
           </span>
         </span>
       </span>
@@ -1826,13 +1819,7 @@
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1064 2929 1129 2962">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">188</ins>
-          </span>
-        </span>
-        <span id="w_341" class="ocr_word" title="bbox 1138 2939 1152 2956">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">r</ins>
-            <del title="nlp 0.90">r</del>
+            <ins class="alt" title="nlp 2.00">188r</ins>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1323 2929 1351 2960">
@@ -1847,18 +1834,7 @@
         </span>
         <span id="w_344" class="ocr_word" title="bbox 1418 2940 1510 2961">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">-oiov</ins>
-            <del title="nlp 0.90">-oiov</del>
-          </span>
-        </span>
-        <span id="w_345" class="ocr_word" title="bbox 1519 2947 1561 2951">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_346" class="ocr_word" title="bbox 1572 2927 1732 2972" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑπομένη]</ins>
+            <ins title="nlp 2.00">ποῖον—ἑπομένη]</ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1758 2928 1931 2961">
@@ -2101,24 +2077,18 @@
             <del title="nlp 0.90">addidi</del>
           </span>
         </span>
-        <span id="w_392" class="ocr_word" title="bbox 1779 3102 1821 3135" lang="grc">
+        <span id="w_392_0" class="ocr_word" title="bbox 1779 3102 1821 3135">
           <span class="alternatives">
-            <ins title="nlp 2.00">29 — 33</ins>
+            <ins class="alt" title="nlp 2.00">29—33</ins>
           </span>
         </span>
-        <span id="w_393" class="ocr_word" title="bbox 1942 3102 2110 3140">
+        <span id="w_392_1" class="ocr_word" title="bbox 1779 3102 1821 3135">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diasfram-</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 302 3158 2110 3207">
-        <span id="w_394" class="ocr_word" title="bbox 302 3163 387 3196">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mati</ins>
-            <del title="nlp 0.90">diasframmati</del>
-          </span>
-        </span>
         <span id="w_395" class="ocr_word" title="bbox 412 3162 551 3206">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">oblique</ins>
@@ -2155,9 +2125,14 @@
             <del title="nlp 0.90">est</del>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 1226 3162 1316 3196" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 1226 3162 1316 3196">
           <span class="alternatives">
-            <ins title="nlp 2.00">ταὐτ</ins>
+            <ins class="alt" title="nlp 2.00">ταύτ΄</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 1226 3162 1316 3196">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1343 3162 1444 3206" lang="grc">
@@ -2177,8 +2152,7 @@
         </span>
         <span id="w_405" class="ocr_word" title="bbox 1591 3161 1683 3202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(fort,</ins>
-            <del title="nlp 0.90">(fort,</del>
+            <ins title="nlp 2.00">(fort.</ins>
           </span>
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1710 3160 1830 3198" lang="grc">
@@ -2189,11 +2163,6 @@
         <span id="w_407" class="ocr_word" title="bbox 1856 3172 1954 3204" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μόνον</ins>
-          </span>
-        </span>
-        <span id="w_408" class="ocr_word" title="bbox 1979 3158 2110 3204" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
       </span>
