--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0524.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0524.html
@@ -490,7 +490,7 @@
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1371 693 1478 747" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὔτε</ins>
+            <ins title="nlp 2.00">(οὔτε</ins>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1515 693 1586 747" lang="grc">
@@ -1945,7 +1945,7 @@
         </span>
         <span id="w_377" class="ocr_word" title="bbox 1747 2668 1766 2701" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">9 εἰ] εἰς V</ins>
+            <ins title="nlp 2.00">εἰ] εἰς V</ins>
           </span>
         </span>
       </span>
@@ -2032,16 +2032,11 @@
         </span>
         <span id="w_394" class="ocr_word" title="bbox 2043 2726 2189 2772" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προλαμ-</ins>
+            <ins title="nlp 2.00">προλαμβάνοντος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 367 2785 2002 2833">
-        <span id="w_395" class="ocr_word" title="bbox 367 2788 524 2833" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βάνοντος</ins>
-          </span>
-        </span>
         <span id="w_396" class="ocr_word" title="bbox 558 2788 589 2821" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κ</ins>
@@ -2067,15 +2062,19 @@
             <ins title="nlp 2.00">Κ:</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 1159 2785 1266 2819" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 1159 2785 1266 2819">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λυκίῳ</ins>
+            <ins class="alt" title="nlp 2.00">λυκίω</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 1159 2785 1266 2819">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1293 2788 1354 2827">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(toj</ins>
-            <del title="nlp 0.90">(toj</del>
+            <ins title="nlp 2.00">(τῶ</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1384 2787 1463 2826">
@@ -2102,12 +2101,6 @@
         <span id="w_407" class="ocr_word" title="bbox 1853 2785 1954 2830" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">λαμβ.</ins>
-          </span>
-        </span>
-        <span id="w_408" class="ocr_word" title="bbox 1977 2786 2002 2818">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
