--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0581.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0581.html
@@ -175,19 +175,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 122 860 662 904">
-        <span id="w_27" class="ocr_word" title="bbox 122 860 379 901" lang="grc">
+        <span id="w_27_0" class="ocr_word" title="bbox 122 860 379 901">
           <span class="alternatives">
-            <ins title="nlp 2.00">Τειτνιάζειν</ins>
+            <ins class="alt" title="nlp 2.00">Γειτνιάζειν</ins>
+          </span>
+        </span>
+        <span id="w_27_1" class="ocr_word" title="bbox 122 860 379 901">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 410 862 505 904">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">173,1</ins>
-          </span>
-        </span>
-        <span id="w_29" class="ocr_word" title="bbox 540 862 662 904">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">198,32</ins>
           </span>
         </span>
       </span>
@@ -477,16 +477,21 @@
             <ins class="alt" title="nlp 1.00">125,27</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 615 1581 840 1613" lang="grc">
+        <span id="w_83_0" class="ocr_word" title="bbox 615 1581 840 1613">
           <span class="alternatives">
-            <ins title="nlp 2.00">γενικώτατον—ὑπάλληλον</ins>
+            <ins class="alt" title="nlp 2.00">γενικώτατον—</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 1628 992 1674">
-        <span id="w_85" class="ocr_word" title="bbox 310 1629 403 1669">
+        <span id="w_85_0" class="ocr_word" title="bbox 310 1629 403 1669">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">147,1</ins>
+            <ins class="alt" title="nlp 2.00">ὑπάλληλον</ins>
+          </span>
+        </span>
+        <span id="w_85_1" class="ocr_word" title="bbox 310 1629 403 1669">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">147,1</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 446 1641 487 1661" lang="grc">
@@ -974,8 +979,7 @@
         </span>
         <span id="w_169" class="ocr_word" title="bbox 426 3226 518 3254">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aiist.</ins>
-            <del title="nlp 0.90">Aiist.</del>
+            <ins title="nlp 2.00">Arist.</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 532 3224 633 3253">
@@ -1009,8 +1013,7 @@
         </span>
         <span id="w_175" class="ocr_word" title="bbox 985 3222 1016 3248">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
       </span>
@@ -1270,12 +1273,7 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1900 811 1909 843">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
-        <span id="w_221" class="ocr_word" title="bbox 1919 810 1939 844">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
+            <ins class="alt" title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1791,11 +1789,6 @@
             <ins title="nlp 2.00">διχαιοσύνη 38,1 sq.</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 1544 2179 1558 2191">
-          <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 1062 2217 1746 2261">
         <span id="w_314" class="ocr_word" title="bbox 1062 2217 1290 2255" lang="grc">
@@ -2019,19 +2012,19 @@
             <ins class="alt" title="nlp 1.00">δόρκων</ins>
           </span>
         </span>
-        <span id="w_353_0" class="ocr_word" title="bbox 1255 2804 1350 2847">
+        <span id="w_353_0_0" class="ocr_word" title="bbox 1255 2804 1350 2847">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(ναῦς</ins>
+          </span>
+        </span>
+        <span id="w_353_0_1" class="ocr_word" title="bbox 1255 2804 1350 2847">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_353_1" class="ocr_word" title="bbox 1255 2804 1350 2847">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τις)</ins>
-          </span>
-        </span>
-        <span id="w_354" class="ocr_word" title="bbox 1466 2803 1544 2845">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">22,2</ins>
           </span>
         </span>
       </span>
@@ -2188,8 +2181,7 @@
       <span class="ocr_line" title="bbox 1036 3208 1710 3256">
         <span id="w_382" class="ocr_word" title="bbox 1036 3221 1145 3256">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Poiph.</ins>
-            <del title="nlp 0.90">Poiph.</del>
+            <ins title="nlp 2.00">Porph.</ins>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 1160 3220 1237 3254">
