--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0663.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0663.html
@@ -36,24 +36,18 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 861 137 1115 171">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTERPRET</ins>
+            <ins class="alt" title="nlp 2.00">INTERPRETATIONE</ins>
             <del title="nlp 0.90">INTERPRET</del>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 1122 138 1288 171">
+        <span id="w_6_0" class="ocr_word" title="bbox 1317 138 1360 182">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ATIONE</ins>
-            <del title="nlp 0.90">ATIONE</del>
+            <ins class="alt" title="nlp 2.00">[Arist.</ins>
           </span>
         </span>
-        <span id="w_6" class="ocr_word" title="bbox 1317 138 1360 182">
+        <span id="w_6_1" class="ocr_word" title="bbox 1317 138 1360 182">
           <span class="alternatives">
-            <ins title="nlp 2.00">[A</ins>
-          </span>
-        </span>
-        <span id="w_7" class="ocr_word" title="bbox 1369 140 1443 171">
-          <span class="alternatives">
-            <ins title="nlp 2.00">list.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1468 149 1500 181">
@@ -64,17 +58,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1520 138 1586 170">
           <span class="alternatives">
-            <ins title="nlp 2.00">22b</ins>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1595 138 1653 181">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">29]</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1869 138 1916 177">
-          <span class="alternatives">
-            <ins title="nlp 2.00">61</ins>
+            <ins title="nlp 2.00">22b29]</ins>
           </span>
         </span>
       </span>
@@ -141,16 +125,11 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1748 265 1857 302" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναγ-</ins>
+            <ins title="nlp 2.00">ἀναγκαίου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 203 317 1854 372">
-        <span id="w_25" class="ocr_word" title="bbox 203 336 310 360" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καίου</ins>
-          </span>
-        </span>
         <span id="w_26" class="ocr_word" title="bbox 333 319 532 372" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγεσθαι)</ins>
@@ -1009,14 +988,14 @@
             <ins class="alt" title="nlp 1.00">πάντως</ins>
           </span>
         </span>
-        <span id="w_195" class="ocr_word" title="bbox 1480 1266 1712 1322" lang="grc">
+        <span id="w_195_0" class="ocr_word" title="bbox 1480 1266 1712 1322">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; φθείρεται &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;φθείρεται&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_196" class="ocr_word" title="bbox 1741 1270 1863 1307" lang="grc">
+        <span id="w_195_1" class="ocr_word" title="bbox 1480 1266 1712 1322">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκεῖνο</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1140,16 +1119,11 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1767 1418 1866 1455" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνέρ-</ins>
+            <ins title="nlp 2.00">ἐνέργεια</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 204 1472 1865 1532">
-        <span id="w_221" class="ocr_word" title="bbox 204 1495 285 1532" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γεια</ins>
-          </span>
-        </span>
         <span id="w_222" class="ocr_word" title="bbox 316 1493 431 1532" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἤγουν</ins>
@@ -1222,9 +1196,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_236" class="ocr_word" title="bbox 862 1540 1017 1598" lang="grc">
+        <span id="w_236_0" class="ocr_word" title="bbox 862 1540 1017 1598">
           <span class="alternatives">
-            <ins title="nlp 2.00">κίνησιν</ins>
+            <ins class="alt" title="nlp 2.00">κί|νησιν</ins>
+          </span>
+        </span>
+        <span id="w_236_1" class="ocr_word" title="bbox 862 1540 1017 1598">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1049 1558 1107 1582" lang="grc">
@@ -1260,11 +1239,6 @@
         <span id="w_243" class="ocr_word" title="bbox 1820 1555 1838 1578" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_244" class="ocr_word" title="bbox 1861 1547 1938 1575">
-          <span class="alternatives">
-            <ins title="nlp 2.00">f.77r</ins>
           </span>
         </span>
       </span>
@@ -1564,16 +1538,11 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1761 1894 1869 1931" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναγ-</ins>
+            <ins title="nlp 2.00">ἀναγκαίῳ·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 1947 1869 2009">
-        <span id="w_303" class="ocr_word" title="bbox 209 1974 325 2000" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καίῳ·</ins>
-          </span>
-        </span>
         <span id="w_304" class="ocr_word" title="bbox 374 1972 528 1998" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δύναται</ins>
@@ -1693,16 +1662,11 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1811 2016 1870 2054" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δύ-</ins>
+            <ins title="nlp 2.00">δύναται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 207 2084 1868 2148">
-        <span id="w_328" class="ocr_word" title="bbox 207 2112 314 2137" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ναται</ins>
-          </span>
-        </span>
         <span id="w_329" class="ocr_word" title="bbox 344 2098 523 2148" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γενέσθαι</ins>
@@ -1725,8 +1689,7 @@
         </span>
         <span id="w_333" class="ocr_word" title="bbox 1206 2087 1282 2141">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(oe)</ins>
-            <del title="nlp 0.90">(oe</del>
+            <ins title="nlp 2.00">&amp;#x003C;δέ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1316 2088 1378 2126" lang="grc">
@@ -1786,9 +1749,14 @@
             <ins class="alt" title="nlp 1.00">ἀναγκαίῳ,</ins>
           </span>
         </span>
-        <span id="w_345" class="ocr_word" title="bbox 1173 2169 1301 2209" lang="grc">
+        <span id="w_345_0" class="ocr_word" title="bbox 1173 2169 1301 2209">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὠιοπερ</ins>
+            <ins class="alt" title="nlp 2.00">ὥσπερ</ins>
+          </span>
+        </span>
+        <span id="w_345_1" class="ocr_word" title="bbox 1173 2169 1301 2209">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 1333 2156 1491 2207" lang="grc">
@@ -1804,11 +1772,6 @@
         <span id="w_348" class="ocr_word" title="bbox 1593 2153 1760 2204" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνάγκης</ins>
-          </span>
-        </span>
-        <span id="w_349" class="ocr_word" title="bbox 1790 2166 1872 2190" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἔπεσθαι</ins>
           </span>
         </span>
       </span>
@@ -1875,16 +1838,11 @@
         </span>
         <span id="w_363" class="ocr_word" title="bbox 1813 2235 1872 2258" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀν-</ins>
+            <ins title="nlp 2.00">ἀνθρώπῳ,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 214 2287 1872 2356">
-        <span id="w_364" class="ocr_word" title="bbox 214 2303 376 2356" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θ·ρώπῳ,</ins>
-          </span>
-        </span>
         <span id="w_365" class="ocr_word" title="bbox 410 2314 488 2339" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἷον</ins>
@@ -2071,16 +2029,11 @@
         </span>
         <span id="w_401" class="ocr_word" title="bbox 1777 2423 1873 2463" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεώ-</ins>
+            <ins title="nlp 2.00">θεώρημα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 214 2493 1873 2558">
-        <span id="w_402" class="ocr_word" title="bbox 214 2523 316 2558" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρημα</ins>
-          </span>
-        </span>
         <span id="w_403" class="ocr_word" title="bbox 353 2519 515 2546" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φανερὸν</ins>
@@ -2150,8 +2103,7 @@
         </span>
         <span id="w_416" class="ocr_word" title="bbox 625 2565 702 2622">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(to)</ins>
-            <del title="nlp 0.90">(to</del>
+            <ins title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_417" class="ocr_word" title="bbox 733 2566 1038 2619" lang="grc">
@@ -2164,9 +2116,14 @@
             <ins class="alt" title="nlp 1.00">ἕπεσθαι</ins>
           </span>
         </span>
-        <span id="w_419" class="ocr_word" title="bbox 1253 2580 1308 2604" lang="grc">
+        <span id="w_419_0" class="ocr_word" title="bbox 1253 2580 1308 2604">
           <span class="alternatives">
-            <ins title="nlp 2.00">τῷ ἡγουμένῳ</ins>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
+          </span>
+        </span>
+        <span id="w_419_1" class="ocr_word" title="bbox 1253 2580 1308 2604">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἡγουμένῳ</ins>
           </span>
         </span>
         <span id="w_420" class="ocr_word" title="bbox 1565 2576 1608 2600" lang="grc">
@@ -2242,8 +2199,7 @@
         </span>
         <span id="w_433" class="ocr_word" title="bbox 1289 2754 1481 2788">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">arldeiulum</ins>
-            <del title="nlp 0.90">arldeiulum</del>
+            <ins title="nlp 2.00">addendum</ins>
           </span>
         </span>
         <span id="w_434" class="ocr_word" title="bbox 1509 2757 1560 2787">
@@ -2341,16 +2297,11 @@
         </span>
         <span id="w_452" class="ocr_word" title="bbox 1875 2821 1944 2853" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χω-</ins>
+            <ins title="nlp 2.00">χωριστῆς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 144 2866 1944 2928">
-        <span id="w_453" class="ocr_word" title="bbox 144 2894 254 2928" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ριστῆς</ins>
-          </span>
-        </span>
         <span id="w_454" class="ocr_word" title="bbox 415 2879 455 2913">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">15</ins>
@@ -2439,13 +2390,7 @@
         </span>
         <span id="w_469" class="ocr_word" title="bbox 409 2937 471 2970">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">192</ins>
-          </span>
-        </span>
-        <span id="w_470" class="ocr_word" title="bbox 482 2947 494 2963">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">r</ins>
-            <del title="nlp 0.90">r</del>
+            <ins class="alt" title="nlp 2.00">192r</ins>
           </span>
         </span>
         <span id="w_471" class="ocr_word" title="bbox 644 2939 723 2980">
@@ -2482,8 +2427,7 @@
         </span>
         <span id="w_477" class="ocr_word" title="bbox 1518 2926 1557 2959">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ifi</ins>
-            <del title="nlp 0.90">Ifi</del>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_478" class="ocr_word" title="bbox 1584 2925 1751 2970" lang="grc">
