--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0615.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0615.html
@@ -246,12 +246,7 @@
       <span class="ocr_line" title="bbox 204 408 1855 467">
         <span id="w_43" class="ocr_word" title="bbox 204 425 434 465" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">σημαντικόν’</ins>
-          </span>
-        </span>
-        <span id="w_45" class="ocr_word" title="bbox 474 425 483 459">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">σημαντικόν’;</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 516 410 594 450" lang="grc">
@@ -259,9 +254,14 @@
             <ins class="alt" title="nlp 1.00">οἷον</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 626 408 726 463">
+        <span id="w_47_0" class="ocr_word" title="bbox 626 408 726 463">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τοῦ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τοῦ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_47_1" class="ocr_word" title="bbox 626 408 726 463">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 756 425 884 449" lang="grc">
@@ -292,11 +292,6 @@
         <span id="w_53" class="ocr_word" title="bbox 1542 428 1649 452" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 1682 413 1855 465" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαίνει</ins>
           </span>
         </span>
       </span>
@@ -884,9 +879,14 @@
             <ins class="alt" title="nlp 1.00">λεγομένων</ins>
           </span>
         </span>
-        <span id="w_176" class="ocr_word" title="bbox 1059 1089 1174 1144">
+        <span id="w_176_0" class="ocr_word" title="bbox 1059 1089 1174 1144">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οἷον&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἶον&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_176_1" class="ocr_word" title="bbox 1059 1089 1174 1144">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_177" class="ocr_word" title="bbox 1204 1091 1389 1144" lang="grc">
@@ -902,11 +902,6 @@
         <span id="w_179" class="ocr_word" title="bbox 1518 1091 1684 1130" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάθους·</ins>
-          </span>
-        </span>
-        <span id="w_180" class="ocr_word" title="bbox 1730 1107 1857 1130" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τύπτω</ins>
           </span>
         </span>
       </span>
@@ -1330,16 +1325,11 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1735 1581 1862 1619" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τραγέ-</ins>
+            <ins title="nlp 2.00">τραγέλαφος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 205 1637 1863 1694">
-        <span id="w_269" class="ocr_word" title="bbox 205 1642 326 1694" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λαφος</ins>
-          </span>
-        </span>
         <span id="w_270" class="ocr_word" title="bbox 355 1654 428 1694" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐχ</ins>
@@ -1640,16 +1630,11 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1722 1920 1861 1960" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σημαν-</ins>
+            <ins title="nlp 2.00">σημαντικά</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 205 1976 1860 2034">
-        <span id="w_330" class="ocr_word" title="bbox 205 1997 292 2021" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τικά</ins>
-          </span>
-        </span>
         <span id="w_331" class="ocr_word" title="bbox 322 1995 434 2034" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φησιν</ins>
@@ -1682,7 +1667,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1368 1976 1467 2029" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἷον</ins>
+            <ins title="nlp 2.00">(οἶον</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1504 1991 1578 2016" lang="grc">
@@ -1928,9 +1913,14 @@
             <ins class="alt" title="nlp 1.00">ψεῦδος</ins>
           </span>
         </span>
-        <span id="w_385" class="ocr_word" title="bbox 1140 2247 1260 2301" lang="grc">
+        <span id="w_385_0" class="ocr_word" title="bbox 1140 2247 1260 2301">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῦτ’</ins>
+            <ins class="alt" title="nlp 2.00">(τοῦτ᾿</ins>
+          </span>
+        </span>
+        <span id="w_385_1" class="ocr_word" title="bbox 1140 2247 1260 2301">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1299 2262 1399 2288" lang="grc">
@@ -1946,11 +1936,6 @@
         <span id="w_388" class="ocr_word" title="bbox 1676 2247 1738 2286" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_389" class="ocr_word" title="bbox 1770 2261 1862 2285" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπόφασιν)</ins>
           </span>
         </span>
       </span>
@@ -2067,9 +2052,9 @@
             <ins class="alt" title="nlp 1.00">ῥήματα</ins>
           </span>
         </span>
-        <span id="w_413" class="ocr_word" title="bbox 1784 2379 1863 2434">
+        <span id="w_413_0" class="ocr_word" title="bbox 1784 2379 1863 2434">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -2468,8 +2453,7 @@
         </span>
         <span id="w_490" class="ocr_word" title="bbox 271 2958 389 2992">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">acldidi</ins>
-            <del title="nlp 0.90">acldidi</del>
+            <ins title="nlp 2.00">addidi</ins>
           </span>
         </span>
         <span id="w_491" class="ocr_word" title="bbox 515 2956 584 2989">
@@ -2507,8 +2491,7 @@
         </span>
         <span id="w_497" class="ocr_word" title="bbox 1381 2950 1420 2983">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
+            <ins title="nlp 2.00">14</ins>
           </span>
         </span>
         <span id="w_498" class="ocr_word" title="bbox 1446 2961 1511 2982" lang="grc">
