--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0525.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0525.html
@@ -534,7 +534,7 @@
         </span>
         <span id="w_100" class="ocr_word" title="bbox 1435 705 1548 759" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρὸς</ins>
+            <ins title="nlp 2.00">(πρὸς</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 1582 720 1648 756" lang="grc">
@@ -814,7 +814,7 @@
       <span class="ocr_line" title="bbox 153 1048 1826 1109">
         <span id="w_155" class="ocr_word" title="bbox 153 1056 213 1095" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κ,αὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 252 1055 403 1102" lang="grc">
@@ -1211,19 +1211,19 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 1209 1717 1404 1771" lang="grc">
+        <span id="w_231_0" class="ocr_word" title="bbox 1209 1717 1404 1771">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀκαπιαῖον</ins>
+            <ins class="alt" title="nlp 2.00">ἀκαριαῖον</ins>
+          </span>
+        </span>
+        <span id="w_231_1" class="ocr_word" title="bbox 1209 1717 1404 1771">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1434 1720 1636 1756" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνεστῶτα.</ins>
-          </span>
-        </span>
-        <span id="w_233" class="ocr_word" title="bbox 1689 1714 1831 1765" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄτομον</ins>
           </span>
         </span>
       </span>
@@ -1525,12 +1525,17 @@
         </span>
         <span id="w_292" class="ocr_word" title="bbox 347 2276 720 2317" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> Ἀποδεδομένου</ins>
+            <ins title="nlp 2.00">Ἀποδεδομένου</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 753 2289 800 2314" lang="grc">
+        <span id="w_293_0" class="ocr_word" title="bbox 753 2289 800 2314">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
+          </span>
+        </span>
+        <span id="w_293_1" class="ocr_word" title="bbox 753 2289 800 2314">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 940 2286 1101 2325" lang="grc">
@@ -1538,7 +1543,12 @@
             <ins title="nlp 2.00">γένους</ins>
           </span>
         </span>
-        <span id="w_295_0" class="ocr_word" title="bbox 1235 2285 1313 2310">
+        <span id="w_295_0_0" class="ocr_word" title="bbox 1235 2285 1313 2310">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_295_0_1" class="ocr_word" title="bbox 1235 2285 1313 2310">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
@@ -1729,9 +1739,9 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_332" class="ocr_word" title="bbox 1817 2523 1894 2558">
+        <span id="w_332_0" class="ocr_word" title="bbox 1817 2523 1894 2558">
           <span class="alternatives">
-            <ins title="nlp 2.00">197ν</ins>
+            <ins class="alt" title="nlp 2.00">197v</ins>
           </span>
         </span>
       </span>
